<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newStudentTitle"
        android:textSize="20dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newStudentSubtitle"
        android:textSize="20dp"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/student_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:text="@string/confirm" />
</LinearLayout>