<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textFontWeight="400"
        android:text="@string/createExamSessionTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <TextView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/examSessionName" />

        <EditText
            android:id="@+id/username"
            android:layout_width="132dp"
            android:layout_height="40dp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/examSessionDate"
            android:onClick="showDatePicker" />

        <TextView
            android:id="@+id/date"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="dd/mm/yyyy" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examSessionStartHour"
            android:onClick="showStartTimePicker" />

        <TextView
            android:id="@+id/startHour"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="hh:mm" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examSessionEndHour"
            android:onClick="showEndTimePicker" />

        <TextView
            android:id="@+id/endHour"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="hh:mm" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="center"
        android:onClick="submit" />

</LinearLayout>